--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,17 +5,27 @@
 .slider {
   overflow: hidden;
   width: 100%;
-  position: relative;
+  position: absolute;
 
+  .slider-previous {
+    max-width: 100%;
+    position: absolute;
+    top: 48%;
+    // bottom: 40%;
+    // right: 90%;
+    left: 0%;
+  }
+  .slider-next {
+    position: absolute;
+    top: 48%;
+    // bottom: 40%;
+    right: 0%;
+    // left: 90%;
+  }
+  
   .slider-item {
-    display: inline-block;
-    height: auto;
-
-    &>img {
-      display: block;
-      height: auto;
-      width: 100%;
-    }
+    max-width: 100%;
+    // max-height: 100%;
   }
 
   .slider-dots-wrap {
