--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,30 +2,41 @@
   margin: 0;
   padding: 0;
 }
+$arrowSize: 15px;
+@mixin arrow($rotateDeg) {
+    z-index: 99;
+    position: absolute;
+    border: 2px solid darkgray;
+    transform: rotate($rotateDeg);
+    border-width: 2px 2px 0 0;
+    box-shadow: 0 0 0 0 #aaa;
+    top: 48%;
+    height:$arrowSize;
+    width: $arrowSize;
+    right: 3%;
+    &:hover {
+      cursor: pointer;
+    }
+}
+
 .slider {
   overflow: hidden;
   width: 100%;
   position: absolute;
 
   .slider-previous {
-    max-width: 100%;
-    position: absolute;
-    top: 48%;
-    // bottom: 40%;
-    // right: 90%;
-    left: 0%;
-  }
-  .slider-next {
-    position: absolute;
-    top: 48%;
-    // bottom: 40%;
+    @include arrow(-135deg);
     right: 0%;
-    // left: 90%;
+    left: 3%;
   }
+  
+  .slider-next {
+    @include arrow(45deg);
+  }
+  
   
   .slider-item {
     max-width: 100%;
-    // max-height: 100%;
   }
 
   .slider-dots-wrap {
